# sistema_estoque

./: .gitignore  README.md  pyproject.toml
data/: estoque.json
src/: estoque.py  main.py  produto.py
src/estoque/: cli.py  estoque.py  produto.py
tests/: main.py  test_estoque.py
